--- a/mqo_survey/views/survey.xml
+++ b/mqo_survey/views/survey.xml
@@ -16,7 +16,7 @@
         <record model="ir.ui.view" id="survey_question_form">
             <field name="name">Form view for survey question</field>
             <field name="model">survey.question</field>
-            <field name="inherit_id" ref="survey.question_form"/>
+            <field name="inherit_id" ref="survey.survey_question_form"/>
             <field name="arch" type="xml">
 	            <xpath expr="//page[@string='Options']" position="inside">
 	                <group string="MQO">
