--- a/mqo_program/views/program.xml
+++ b/mqo_program/views/program.xml
@@ -5,12 +5,13 @@
             <field name="name">program.form</field>
             <field name="model">mqo.program</field>
             <field name="arch" type="xml">
-                <form string="program Form">
+                <form string="Program Form">
                     <sheet>
                     	<notebook colspan="4">
-                    		<page name='basic' string="Basic information">
+                    		<page name='about' string="About the course">
 		                        <group>
 		                            <field name="name"/>
+		                            <field name="description"/>
 			                    </group>
 		                    </page>
 	                    </notebook>
@@ -24,7 +25,7 @@
             <field name="name">program.tree</field>
             <field name="model">mqo.program</field>
             <field name="arch" type="xml">
-                <tree string="program Tree">
+                <tree string="Program Tree">
                     <field name="name"/>
                 </tree>
             </field>
@@ -47,7 +48,7 @@
             that is an action opening a view or a set of views
         -->
         <record model="ir.actions.act_window" id="program_list_action">
-            <field name="name">programs</field>
+            <field name="name">Programs</field>
             <field name="res_model">mqo.program</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
