--- a/mqo_program/views/program.xml
+++ b/mqo_program/views/program.xml
@@ -12,6 +12,7 @@
 		                        <group>
 		                            <field name="name"/>
 		                            <field name="description"/>
+		                            <field name="brochure" widget="binary"/>
 			                    </group>
 		                    </page>
 	                    </notebook>
