--- a/mqo_interest/templates/templates.xml
+++ b/mqo_interest/templates/templates.xml
@@ -15,7 +15,7 @@
 	                            <p>With enough interest in the program, we'll organise to run it.</p>
 	                        </div>
 	                    </div>
-				        <form action="/program/registerinterest" method="post" class="form-horizontal mt32" enctype="multipart/form-data">
+				        <form action="/interest/register" method="post" class="form-horizontal mt32" enctype="multipart/form-data">
 				            <div t-attf-class="form-group">
 				                <label class="col-md-3 col-sm-4 control-label" for="program_title">Program</label>
 				                <div class="col-md-7 col-sm-8">
