--- a/mqo_program/templates/program.xml
+++ b/mqo_program/templates/program.xml
@@ -46,7 +46,7 @@
 			      <section>
 			        <div class="container">
 				        <t t-foreach="programs" t-as="program">
-							<div class="row mqo-featured">
+							<div class="row mqo-featured mb32">
 								<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8">
 						    		<div class="row">
 					                    <div class="col-xs-3 col-sm-4 col-md-4 pull-left">
@@ -54,19 +54,29 @@
 					                    </div>
 					                    <div class=" col-xs-9 col-sm-8 col-md-8">
 					                      	<div>
-				                                <div class="mb16">
-					                                <!-- Split button -->
-							                        <div class="btn-group pull-right mb16">
-							                            <button type="button" class="btn btn-primary">
-							                                Read more</button>
-							                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-							                                <span class="caret"></span><span class="sr-only">Read more</span>
-							                            </button>
-							                            <ul class="dropdown-menu" role="menu">
-							                                <li><a href="#">Brochure PDF</a></li>
-							                                <li class="divider"></li>
-							                                <li><a href="#">Testimonials</a></li>
-							                            </ul>
+    			                                <div class="mb16">
+							                        <div class="pull-right">
+								                        <div class="row">
+								                        	<!-- Split button -->
+									                        <div class="btn-group btn-block">
+									                            <a type="button" class="btn btn-primary" t-attf-href="/page/{{(program.name)}}">
+									                                Find out more</a>
+									                            <button class="btn btn-primary dropdown-toggle pull-right" data-toggle="dropdown">
+									                                <span class="caret"></span><span class="sr-only">Other</span>
+									                            </button>
+									                            <ul class="dropdown-menu" role="menu">
+									                                <li><a href="#">Brochure PDF</a></li>
+									                                <li class="divider"></li>
+									                                <li><a href="#">Testimonials</a></li>
+									                            </ul>
+									                    	</div>
+								                    	</div>
+								                        <div class="row mt16">
+									                        <div class="btn-group btn-block">
+									                            <a class="btn btn-primary btn-block" t-attf-href="/interest/{{slug(program)}}">
+									                                Register interest</a>
+									                    	</div>
+								                    	</div>
 							                    	</div>
 					                                <div>
 					                                	<h3><t t-esc="program.name"/></h3>
@@ -74,13 +84,15 @@
 							                    </div>
 							                    <div>
 								                    <p><t t-esc="program.description"/></p>
-							                        <p><span class="glyphicon glyphicon-time"></span> 5 sessions, 90 minutes each</p>
-							                        <p><span class="glyphicon glyphicon-calendar"></span> 5 weeks, 1 session per week</p>
-							                        <p><span class="glyphicon glyphicon-gift"></span> Key benefit areas:</p>
-							                        <p><span class="label label-success">Area 1</span>
-					                                	<span class="label label-success">Area 2</span>
-					                                	<span class="label label-success">Area 3</span>
-					                                </p>
+							                        <p t-if="program.timeframe_detail"><span class="glyphicon glyphicon-time"></span> <t t-esc="program.session_detail"/></p>
+							                        <p t-if="program.timeframe_detail"><span class="glyphicon glyphicon-calendar"></span> <t t-esc="program.timeframe_detail"/></p>
+							                        <t t-if="program.benefits">
+								                        <p><span class="glyphicon glyphicon-gift"></span> Key benefit areas:</p>
+								                        <p><span t-if="program.benefits[0]" class="label label-success"><t t-esc="program.benefits[0].benefit.name"/></span>
+						                                	<span t-if="program.benefits[1]" class="label label-success"><t t-esc="program.benefits[1].benefit.name"/></span>
+						                                	<span t-if="program.benefits[2]" class="label label-success"><t t-esc="program.benefits[2].benefit.name"/></span>
+						                                </p>
+					                                </t>
 				                                </div>
 			                                </div>
 					                    </div>
