--- a/mqo_program/views/program.xml
+++ b/mqo_program/views/program.xml
@@ -13,6 +13,14 @@
 		                            <field name="name"/>
 		                            <field name="description"/>
 		                            <field name="brochure" widget="binary"/>
+		                            <field name="session_detail"/>
+		                            <field name="timeframe_detail"/>
+		                            <field name="benefits">
+		                            	<tree string="Benefits">
+		                            		<field name="benefit"/>
+		                            		<field name="sequence"/>
+		                            	</tree>
+		                            </field>
 			                    </group>
 		                    </page>
 	                    </notebook>
