[IMP] Improved program functionality, allowing multiple programs with brochures and images.

--- a/mqo_program/templates/program.xml
+++ b/mqo_program/templates/program.xml
@@ -6,7 +6,7 @@
         <div id="wrap">
 	        <div class="oe_structure"/>
 	        <div>
-	          <t t-if="listname=='individuals'">
+	          <t t-if="category=='individuals'">
 			      <section>
 			        <div class="container">
 			          <div class="row">
@@ -18,7 +18,7 @@
 			        </div>
 			      </section>
 		      </t>
-	          <t t-if="listname=='organisations'">
+	          <t t-if="category=='organisations'">
 			      <section>
 			        <div class="container">
 			          <div class="row">
@@ -30,7 +30,7 @@
 			        </div>
 			      </section>
 		      </t>
-	          <t t-if="listname=='all'">
+	          <t t-if="category=='all'">
 			      <section>
 			        <div class="container">
 			          <div class="row">
@@ -50,7 +50,7 @@
 								<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8">
 						    		<div class="row">
 					                    <div class="col-xs-3 col-sm-4 col-md-4 pull-left">
-					                        <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
+					                        <a t-attf-href="/program/{{(program.name.lower())}}/brochure.pdf"><img t-attf-src="/program/{{(program.name.lower())}}/image.jpg" alt="" class="img-rounded img-responsive" /></a>
 					                    </div>
 					                    <div class=" col-xs-9 col-sm-8 col-md-8">
 					                      	<div>
@@ -59,15 +59,15 @@
 								                        <div class="row">
 								                        	<!-- Split button -->
 									                        <div class="btn-group btn-block">
-									                            <a type="button" class="btn btn-primary" t-attf-href="/page/{{(program.name)}}">
+									                            <a type="button" class="btn btn-primary" t-attf-href="{{(program.pagelink)}}">
 									                                Find out more</a>
 									                            <button class="btn btn-primary dropdown-toggle pull-right" data-toggle="dropdown">
 									                                <span class="caret"></span><span class="sr-only">Other</span>
 									                            </button>
 									                            <ul class="dropdown-menu" role="menu">
-									                                <li><a href="#">Brochure PDF</a></li>
-									                                <li class="divider"></li>
-									                                <li><a href="#">Testimonials</a></li>
+									                                <li><a t-attf-href="/program/{{(program.name.lower())}}/brochure.pdf">Brochure PDF</a></li>
+									                                <!-- <li class="divider"></li>
+									                                <li><a href="#">Testimonials</a></li> -->
 									                            </ul>
 									                    	</div>
 								                    	</div>
@@ -83,15 +83,28 @@
 					                                </div>
 							                    </div>
 							                    <div>
-								                    <p><t t-esc="program.description"/></p>
-							                        <p t-if="program.timeframe_detail"><span class="glyphicon glyphicon-time"></span> <t t-esc="program.session_detail"/></p>
-							                        <p t-if="program.timeframe_detail"><span class="glyphicon glyphicon-calendar"></span> <t t-esc="program.timeframe_detail"/></p>
-							                        <t t-if="program.benefits">
-								                        <p><span class="glyphicon glyphicon-gift"></span> Key benefit areas:</p>
-								                        <p><span t-if="program.benefits[0]" class="label label-success"><t t-esc="program.benefits[0].benefit.name"/></span>
-						                                	<span t-if="program.benefits[1]" class="label label-success"><t t-esc="program.benefits[1].benefit.name"/></span>
-						                                	<span t-if="program.benefits[2]" class="label label-success"><t t-esc="program.benefits[2].benefit.name"/></span>
-						                                </p>
+								                    <p name="program_name"><t t-esc="program.description"/></p>
+							                        <p name="program_session_detail" t-if="program.timeframe_detail"><span class="glyphicon glyphicon-time"></span> <t t-esc="program.session_detail"/></p>
+							                        <p name="program_timeframe_detail" t-if="program.timeframe_detail"><span class="glyphicon glyphicon-calendar"></span> <t t-esc="program.timeframe_detail"/></p>
+							                        <t name="program_benefits" t-if="program.benefits">
+								                        <p><span class="glyphicon glyphicon-check"></span> Key benefit areas:</p>
+									                        <p>
+									                        <t t-foreach="program.benefits" t-as="link">
+									                        	<t t-if="link_index &lt; 3">
+									                        		<span class="label label-success"><t t-esc="link.benefit.name"/></span>
+									                        	</t>
+							                                </t>
+							                                </p>
+						                                <t t-if="program.benefits[3]">
+							                                <p><span class="glyphicon glyphicon-check"></span> Other benefit areas:</p>
+									                        <p>
+									                        <t t-foreach="program.benefits" t-as="link">
+									                        	<t t-if="link_index &gt; 2">
+									                        		<span class="label label-info"><t t-esc="link.benefit.name"/></span>
+									                        	</t>
+							                                </t>
+							                                </p>
+							                            </t>
 					                                </t>
 				                                </div>
 			                                </div>
