--- a/mqo_exercises/templates/templates.xml
+++ b/mqo_exercises/templates/templates.xml
@@ -4,6 +4,7 @@
         <xpath expr="." position="inside">
         	<link rel='stylesheet' href='/mqo_exercises/static/src/css/portlet.css'/>
         	<link rel='stylesheet' href='/mqo_exercises/static/src/css/timeline.css'/>
+        	<script type="text/javascript" src="/mqo_exercises/static/src/js/response.js"/>
         </xpath>
     </template>
     
@@ -51,11 +52,32 @@
 		<div class="portlet-body">
 			<h4><t t-esc="assignment.exercise_id.name"/></h4>
 			<p><t t-esc="assignment.exercise_id.instructions"/></p>
-			<div class="mt16 text-center">
-				<a t-att-href="'/exercise/response/%s/%s' % (slug(assignment), assignment.response_token)" class="btn btn-primary btn-lg mb32"><span class="fa fa-long-arrow-right"/> <span class="hidden-xs">Log how it went</span><span class="visible-xs-inline">Log how it went</span></a>
-			</div>
+			<div>
+				<form role="form" method="post" class="js_responseform" t-att-name="rating" t-att-action="'/assignment/action/%s' % (slug(assignment))" t-att-data-submit="'/assignment/rating/%s' % (slug(assignment))">
+            		<input type="hidden" name="assignment_id" t-att-value="assignment.id" />
+            		<input type="hidden" name="exercise_id" t-att-value="assignment.exercise_id.id" />
+            		<input type="textbox" name="rating" t-att-value="0"/>
+            		<button type="submit" class="btn btn-default" name="button_submit">Rate it</button>
+            	</form>
+        	</div>
+        	<div id="ex_response">
+        		No response yet.
+        	</div>
 	    </div>
 	  </div>
+        <!-- Modal used to display error message, i.c.o. ajax error -->
+        <div class="modal fade" id="AJAXErrorModal" role="dialog" aria-labelledby="AJAXErrorModal" aria-hidden="true" >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+                        <h4 class="modal-title">A problem has occured</h4>
+                    </div>
+                    <div class="modal-body"><p>Something went wrong while contacting survey server. <strong class="text-danger">Your answers have probably not been recorded.</strong> Try refreshing.</p></div>
+                    <div class="modal-footer"><button type="button" class="btn btn-primary" data-dismiss="modal">Close</button></div>
+                </div>
+            </div>
+        </div>
 	</template>
 	
 	
